--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tempo-air-vision</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>OrbitAir</title>
+    <meta name="description" content="Powered By NASA Tempo" />
+    <meta name="author" content="OrbitOps" />
 
-    <meta property="og:title" content="tempo-air-vision" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="OrbitAir" />
+    <meta property="og:description" content="Powered By NASA Tempo" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/orbitops-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Powered By Nasa Tempo" />
+    <meta name="twitter:image" content="/orbitops-logo.png" />
   </head>
 
   <body>
